Update wsdl resolving to take account of wsdli:location namespace to location url mappings
git-svn-id: https://svn.apache.org/repos/asf/tuscany/sca-java-2.x/trunk@963496 13f79535-47bb-0310-9956-ffa450edef68